--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "scripts": {
     "watch": "tsc --watch",
     "test": "jest --watch",
-    "prebuild": "license-checker --exclude 'MIT, MIT OR X11, BSD, ISC' -production",
-    "build": "tsup",
-    "demo": "vite ./demo --config ./vite.config.js"
+    "license": "license-checker --exclude 'MIT, MIT OR X11, BSD, ISC' -production",
+    "prebuild": "",
+    "build": "tsc --noemit && tsup",
+    "build-vite": "vite build --config vite.build.config.js",
+    "demo": "vite ./demo --config vite.demo.config.js"
   },
   "author": "Daeinc",
   "license": "MIT",
@@ -25,6 +27,8 @@
     "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^29.3.1",
     "license-checker": "^25.0.1",
+    "parcel": "^2.8.2",
+    "rollup-plugin-dts": "^5.1.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "tsup": "^6.5.0",
