--- a/package.json
+++ b/package.json
@@ -24,12 +24,18 @@
     "@daeinc/draw": "^0.2.1",
     "@daeinc/math": "^0.4.0",
     "@types/node": "^18.11.18",
+    "@types/p5": "^1.4.3",
+    "@types/three": "^0.148.0",
     "jest": "^29.3.1",
     "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^29.3.1",
     "license-checker": "^25.0.1",
+    "ogl": "^0.0.103",
+    "p5": "^1.5.0",
     "parcel": "^2.8.2",
+    "pts": "^0.11.3",
     "rollup-plugin-dts": "^5.1.0",
+    "three": "^0.148.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "tsup": "^6.5.0",
