--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest-environment-jsdom": "^29.3.1",
     "license-checker": "^25.0.1",
     "ogl": "^0.0.103",
+    "ogl-typescript": "^0.1.40",
     "p5": "^1.5.0",
     "parcel": "^2.8.2",
     "pts": "^0.11.3",
