--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "jest --watch",
     "license": "license-checker --exclude 'MIT, MIT OR X11, BSD, ISC' -production",
     "prebuild": "",
-    "build": "tsc --noemit && tsup",
+    "build": "tsup",
     "build-vite": "vite build --config vite.build.config.js",
     "demo": "vite ./demo --config vite.demo.config.js"
   },
@@ -24,15 +24,12 @@
     "@daeinc/draw": "^0.2.1",
     "@daeinc/math": "^0.4.0",
     "@types/node": "^18.11.18",
-    "@types/p5": "^1.4.3",
     "@types/three": "^0.148.0",
     "jest": "^29.3.1",
     "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^29.3.1",
     "license-checker": "^25.0.1",
-    "ogl": "^0.0.103",
     "ogl-typescript": "^0.1.40",
-    "p5": "^1.5.0",
     "parcel": "^2.8.2",
     "pts": "^0.11.3",
     "rollup-plugin-dts": "^5.1.0",
