--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
     "ogl-typescript": "^0.1.40",
     "parcel": "^2.8.2",
     "pts": "^0.11.3",
-    "rollup-plugin-dts": "^5.1.0",
+    "rollup-plugin-dts": "^5.1.1",
     "three": "^0.148.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4",
-    "vite": "^4.0.4"
+    "vite": "^4.0.4",
+    "vite-dts": "^1.0.4",
+    "vite-plugin-dts": "^1.7.1",
+    "vite-plugin-typescript": "^1.0.4"
   },
   "dependencies": {
     "@daeinc/canvas": "^0.12.1",
