--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@daeinc/canvas": "^0.12.1",
     "@daeinc/dom": "^0.4.1",
+    "gifenc": "^1.0.3",
     "webm-muxer": "^1.1.5"
   },
   "devDependencies": {
