--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
+    // "allowJs": true,
     "rootDir": "./src",
     "outDir": "./dist"
   },
