--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^29.3.1",
     "license-checker": "^25.0.1",
+    "load-asset": "^1.2.0",
+    "ogl": "^0.0.103",
     "p5": "^1.5.0",
     "parcel": "^2.8.3",
     "pts": "^0.11.3",
