--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prepublish": "npm run build",
     "build": "tsc --noemit && tsup",
     "build-vite": "vite build --config vite.build.config.js",
-    "demo": "vite ./demo --config vite.demo.config.js"
+    "demo": "vite ./demo --config vite.dev.config.ts"
   },
   "author": "Daeinc",
   "license": "MIT",
